--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+    <meta name="twitter:image" content="https://www.whatonearth.xyz/assets/banner.jpg">
+    <meta name="twitter:description" content="🌎 whatonearth.xyz is the first Open-Source Web3 Search Directory with all the information you need about Web3 🦄🌈">
+    <meta name="twitter:title" content="🪄 whatonearth.xyz">
+    <meta name="twitter:creator" content="@whatonearth_xyz">
+    <meta name="twitter:site" content="@whatonearth_xyz">
+    <meta name="twitter:card" content="summary_large_image">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js" integrity="sha512-yocoLferfPbcwpCMr8v/B0AB4SWpJlouBwgE0D3ZHaiP1nuu5djZclFEIj9znuqghaZ3tdCMRrreLoM8km+jIQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
