Fix banner link

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    <meta name="twitter:image" content="https://www.whatonearth.xyz/assets/banner.jpg">
+    <meta name="twitter:image" content="https://www.whatonearth.xyz/assets/banner.png">
     <meta name="twitter:description" content="🌎 whatonearth.xyz is the first Open-Source Web3 Search Directory with all the information you need about Web3 🦄🌈">
     <meta name="twitter:title" content="🪄 whatonearth.xyz">
     <meta name="twitter:creator" content="@whatonearth_xyz">
